<resources>
    <string name="app_name">STDevelopment</string>
    <string name="title_home">Home</string>
    <string name="title_history">História</string>
    <string name="title_contact">Contato</string>
    <string name="title_list">Lista</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="noHaveAccount">Do not have an account</string>
    <string name="haveAccount">Do have an account</string>
    <string name="createAccount">create it now!</string>
    <string name="loginAccount">login now!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
